# solana-multisend-onchain

./: Cargo.toml
solana-wallet/: keypair.json
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
