[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "=1.11.1"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
hex = "0.4.3"
borsh = "0.9.0"

[lib]
crate-type = ["cdylib", "lib"]
